--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 p {
-  color: blue;
+  
 }
 
 .container {
-  
+  font-family: Palatino, serif;
 }
 
 .heading {
-  
+  border: 5px solid black;
 }
 
 .main {
-  background-color: green;
+  border: 5px solid black;
 }
