Update font size h2 and h3

--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ h1 {
   font-size: 56px;
 }
 
+h2 {
+  font-size: 50px;
+}
+
+h3{
+  font-size: 44px;
+}
+
 .container {
   font-family: Palatino, serif;
 }
