--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-  
+  font-size: 12px;
 }
 
 h1 {
@@ -16,6 +16,10 @@ h3{
 
 h4{
   font-size: 22px;
+}
+
+ul{
+  font-size: 12px;
 }
 
 .container {
