--- a/style.css
+++ b/style.css
@@ -22,17 +22,17 @@ ul{
   font-size: 16px;
 }
 
-.container {
-  font-family: Palatino, serif;
+.heading {
+  font-family: Palatino;
   padding: 20px;
-  border: 5px solid black;
 }
 
-.heading {
-  padding: 20px;
-  border: 5px solid black;
+.profile {
+  font-family: Palatino;
+  border: 1px solid grey;
 }
 
 .main {
+  font-family: Palatino;
   padding: 20px;
 }
