Add background color AliceBlue

--- a/style.css
+++ b/style.css
@@ -25,15 +25,18 @@ ul{
 .heading {
   font-family: Palatino;
   padding: 20px;
+  background-color: AliceBlue;
 }
 
 .profile {
   font-family: Palatino;
   border: 1px solid grey;
   padding: 20px;
+  background-color: AliceBlue;
 }
 
 .main {
   font-family: Palatino;
   padding: 20px;
+  background-color: AliceBlue;
 }
