--- a/style.css
+++ b/style.css
@@ -24,12 +24,14 @@ ul{
 
 .heading {
   font-family: Palatino;
+  color: #666666;
   padding: 20px;
   background-color: AliceBlue;
 }
 
 .profile {
   font-family: Palatino;
+  color: #666666;
   border: 1px solid grey;
   padding: 20px;
   background-color: AliceBlue;
@@ -37,6 +39,7 @@ ul{
 
 .main {
   font-family: Palatino;
+  color: #666666;
   padding: 20px;
   background-color: AliceBlue;
 }
