Change heading color and image border color

--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ ul{
 }
 
 img {
-  border: #80c3ff 4px solid;
+  border: #ffffff 4px solid;
 }
 
 .heading {
   font-family: Palatino;
   color: #595959;
   padding: 20px;
-  background-color: AliceBlue;
+  background-color: #e6f3ff;
 }
 
 .profile {
