Return heading color

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img {
   font-family: Palatino;
   color: #595959;
   padding: 20px;
-  background-color: #e6f3ff;
+  background-color: AliceBlue;
 }
 
 .profile {
