--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ img {
 .main {
   font-family: Palatino;
   color: #595959;
-  padding: 20px;
+  padding: 5px;
+  width: 960px;
+  margin: 20px auto;
   background-color: AliceBlue;
  
 }
