--- a/style.css
+++ b/style.css
@@ -26,45 +26,48 @@ img {
   border: #ffffff 4px solid;
 }
 
-.heading {
+#container {
+    width: 960px;
+    margin: 0 auto;
+}
+
+#header {
   font-family: Palatino;
   color: #595959;
   padding: 20px;
   background-color: AliceBlue;
 }
 
-.profile {
-  font-family: Palatino;
-  color: #595959;
-  padding: 20px;
-  background-color: AliceBlue;
-}
-
-.main {
+#primary {
+  float: left;
+  width: 240px;
   font-family: Palatino;
   color: #595959;
   padding: 5px;
-  width: 960px;
   margin: 20px auto;
   background-color: AliceBlue;
- 
 }
 
-.first {
-  width: 290px;
+#content {
   float: left;
-  padding: 5px 15px;
+  width: 480px;
+  font-family: Palatino;
+  color: #595959;
+  padding: 5px;
+  margin: 20px auto;
+  background-color: AliceBlue;
 }
 
-.second {
-  width: 294px;
+#secondary {
   float: left;
-  padding: 5px 15px;
-  margin: 0px 5px 5px 5px;
+  width: 240px;
+  font-family: Palatino;
+  color: #595959;
+  padding: 5px;
+  margin: 20px auto;
+  background-color: AliceBlue;
 }
 
-.third {
-  width: 270px;
-  padding: 5px 15px;
-  float: left;
+#footer {
+    clear: both;
 }
