--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 }
 
 #header {
-  font-family: Museo Sans;
+  font-family: Comfortaa;
   color: #333A56;
   padding: 20px;
   background-color: #F7F5E6;
@@ -49,7 +49,7 @@ body{
 #primary {
   float: left;
   width: 240px;
-  font-family: Museo Sans;
+  font-family: Comfortaa;
   color: #333A56;
   padding: 5px;
   background-color: #F7F5E6;
@@ -58,7 +58,7 @@ body{
 #content {
   float: left;
   width: 480px;
-  font-family: Museo Sans;
+  font-family: Comfortaa;
   color: #333A56;
   padding: 5px;
   background-color: #F7F5E6;
@@ -67,7 +67,7 @@ body{
 #secondary {
   float: left;
   width: 240px;
-  font-family: Museo Sans;
+  font-family: Comfortaa;
   color: #333A56;
   padding: 5px;
   background-color: #F7F5E6;
