--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul{
   font-size: 16px;
 }
 
-img {
+img{
   border: #52658F 6px solid;
   float: left;
   clear: right;
@@ -32,6 +32,15 @@ img {
 body{
   background-color: #F7F5E6;
 }
+
+hr{
+  border: 0;
+  width: 80%;
+  color: #52658F;
+  background-color: #52658F;
+  height: 5px;
+}
+   
 
 #container {
     width: 1000px;
