Add padding in all directions

--- a/style.css
+++ b/style.css
@@ -60,7 +60,10 @@ hr{
   width: 240px;
   font-family: Optima;
   color: #333A56;
-  padding: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #F7F5E6;
 }
 
@@ -69,7 +72,10 @@ hr{
   width: 480px;
   font-family: Optima;
   color: #333A56;
-  padding: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #F7F5E6;
 }
 
@@ -78,7 +84,10 @@ hr{
   width: 240px;
   font-family: Optima;
   color: #333A56;
-  padding: 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #F7F5E6;
 }
 
