Delete all direction padding and add all direction margin

--- a/style.css
+++ b/style.css
@@ -60,10 +60,11 @@ hr{
   width: 240px;
   font-family: Optima;
   color: #333A56;
-  padding-left: 6px;
-  padding-right: 6px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding: 6px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   background-color: #F7F5E6;
 }
 
@@ -72,10 +73,11 @@ hr{
   width: 480px;
   font-family: Optima;
   color: #333A56;
-  padding-left: 6px;
-  padding-right: 6px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding: 6px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   background-color: #F7F5E6;
 }
 
@@ -84,10 +86,11 @@ hr{
   width: 240px;
   font-family: Optima;
   color: #333A56;
-  padding-left: 6px;
-  padding-right: 6px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding: 6px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   background-color: #F7F5E6;
 }
 
