--- a/style.css
+++ b/style.css
@@ -4,18 +4,22 @@ p {
 
 h1 {
   font-size: 56px;
+  text-shadow: 2px 2px 5px grey;
 }
 
 h2 {
   font-size: 42px;
+  text-shadow: 2px 2px 5px grey;
 }
 
 h3{
   font-size: 30px;
+  text-shadow: 2px 2px 5px grey;
 }
 
 h4{
   font-size: 22px;
+  text-shadow: 2px 2px 5px grey;
 }
 
 ul{
