try new background color

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img{
 }
 
 body{
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 hr{
@@ -49,14 +49,14 @@ hr{
 #container {
     width: 1000px;
     margin: 0 auto;
-    background-color: #F7F5E6;
+    background-color: #DEDCCF;
 }
 
 #header {
   font-family: Optima;
   color: #333A56;
   padding: 20px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 #primary {
@@ -65,7 +65,7 @@ hr{
   font-family: Optima;
   color: #333A56;
   padding: 5px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 #content {
@@ -74,7 +74,7 @@ hr{
   font-family: Optima;
   color: #333A56;
   padding: 5px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 #secondary {
