--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ hr{
   font-family: Optima;
   color: #333A56;
   padding: 5px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 #seccontent {
@@ -100,7 +100,7 @@ hr{
   font-family: Optima;
   color: #333A56;
   padding: 5px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
 
 #secsecondary {
@@ -109,7 +109,7 @@ hr{
   font-family: Optima;
   color: #333A56;
   padding: 5px;
-  background-color: #F7F5E6;
+  background-color: #DEDCCF;
 }
   
 
