New line height again

--- a/style.css
+++ b/style.css
@@ -5,25 +5,25 @@ p {
 h1 {
   font-size: 56px;
   text-shadow: 2px 2px 5px grey;
+  line-height: .50;
 }
 
 h2 {
   font-size: 42px;
   text-shadow: 2px 2px 5px grey;
+  line-height: .50;
 }
 
 h3{
   font-size: 30px;
   text-shadow: 2px 2px 5px grey;
+  line-height: .50;
 }
 
 h4{
   font-size: 22px;
   text-shadow: 2px 2px 5px grey;
-}
-
-h1, h2, h3, h4{
-  line-height: 1.00;
+  line-height: .50;
 }
 
 ul{
