--- a/style.css
+++ b/style.css
@@ -5,25 +5,29 @@ p {
 h1 {
   font-size: 56px;
   text-shadow: 2px 2px 5px grey;
-  line-height: .50;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-size: 42px;
   text-shadow: 2px 2px 5px grey;
-  line-height: .50;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 h3{
   font-size: 30px;
   text-shadow: 2px 2px 5px grey;
-  line-height: .50;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 h4{
   font-size: 22px;
   text-shadow: 2px 2px 5px grey;
-  line-height: .50;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 ul{
