Switch background texture

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(http://i63.tinypic.com/2z69qpy.jpg) no-repeat center fixed; 
+  background: url(http://i64.tinypic.com/35bb38n.jpg) no-repeat center fixed; 
   background-size: cover;
 }
 
