--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 
 p {
   font-size: 20px;
+  font-weight: bold;
 }
 
 h1 {
@@ -37,6 +38,7 @@ h4{
 
 ul{
   font-size: 16px;
+  font-weight: bold;
 }
 
 img{
