New background w color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
-  background: url(http://i64.tinypic.com/35bb38n.jpg) no-repeat center fixed; 
+  background: url(http://i64.tinypic.com/vd2yvc.png) no-repeat center fixed; 
   background-size: cover;
+  background-color: #dedccf;
 }
 
 p {
