--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(http://i64.tinypic.com/vd2yvc.png) no-repeat center fixed; 
+  background: url(http://i67.tinypic.com/eqp1ev.png) no-repeat center fixed; 
   background-size: cover;
   background-color: #dedccf;
 }
