Try fix background

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
-  background: url(http://i67.tinypic.com/n3aob7.jpg) no-repeat center fixed; 
-  background-size: cover;
+  background: url(http://i65.tinypic.com/2s12e77.png);
   background-color: #dedccf;
 }
 
