--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(http://i65.tinypic.com/2s12e77.png);
+  background: url(http://i67.tinypic.com/a09k6e.png);
   background-color: #dedccf;
 }
 
